[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "busdayaxis"
version = "0.1.0"
description = "Matplotlib business day axis scale"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Matplotlib",
]
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    {name = "Simon Niederberger", email = "s.niederberger@hotmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
]

[project.urls]
Homepage = "https://saemeon.github.io/busdayaxis/"
Repository = "https://github.com/saemeon/busdayaxis"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-gallery",
    "mkdocstrings[python]",
    "mike",
]
dev = [
    "ruff",
    "prek",
    "pytest",
    "pytest-cov",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-gallery",
    "mkdocstrings[python]",
    "mike",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["src"]
