[project]
name = "busdayaxis"
dynamic = ["version"]
description = "Business day axis scale for matplotlib"
keywords = ["matplotlib", "business day", "busday", "matplotlib-scale"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Matplotlib",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
maintainers = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
requires-python = ">=3.9"
dependencies = ["matplotlib", "numpy"]

[project.urls]
Homepage = "https://saemeon.github.io/busdayaxis/"
Repository = "https://github.com/saemeon/busdayaxis"

[dependency-groups]
test = ["pandas", "pytest", "pytest-cov"]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-gallery",
    "mkdocstrings[python]",
    "mike",
]
dev = ["ruff", "prek", { include-group = "test" }, { include-group = "doc" }]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/busdayaxis/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
version = { attr = "busdayaxis._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
busdayaxis = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203", "UP035"]
